Added sync log strings for local events (dredging) and disconnected state (fix for Bug 73332).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4454 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -661,6 +661,12 @@
   <data name="downloadFile">
     <value>Downloading file: {0}</value>
   </data>
+  <data name="localFile">
+    <value>Found local change in file: {0}</value>
+  </data>
+  <data name="syncingFile">
+    <value>Synchronizing file: {0}</value>
+  </data>
   <data name="deleteClientDir">
     <value>Deleting directory on client: {0}</value>
   </data>
@@ -669,6 +675,12 @@
   </data>
   <data name="downloadDir">
     <value>Downloading directory: {0}</value>
+  </data>
+  <data name="localDir">
+    <value>Found local change in directory: {0}</value>
+  </data>
+  <data name="syncingDir">
+    <value>Synchronizing directory: {0}</value>
   </data>
   <data name="deleteUnknown">
     <value>Deleting on server: {0}</value>
