Changed "Preparing to sync" to "Checking for local changes" (Bug 73332).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4488 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/GlobalProperties.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.resx
@@ -1880,10 +1880,10 @@
     <value>Log entries cleared.</value>
   </data>
   <data name="localSync">
-    <value>Preparing to sync: {0}</value>
+    <value>Checking for local changes in {0}</value>
   </data>
   <data name="preSync">
-    <value>Preparing to synchronize</value>
+    <value>Checking for local changes</value>
   </data>
   <data name="disconnected">
     <value>Disconnected</value>
