--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -640,6 +640,9 @@
   <data name="serverConnectErrorTitle">
     <value>Unable to Connect to iFolder Server</value>
   </data>
+  <data name="localSync">
+    <value>Checking for local changes: {0}</value>
+  </data>
   <data name="synciFolder">
     <value>Started sync of: {0}</value>
   </data>
