Changed title of conflict resolver (fix for Bug 83459).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4605 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/ConflictResolver.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.resx
@@ -3071,7 +3071,7 @@
 		<value>CenterParent</value>
 	</data>
 	<data name="$this.Text">
-		<value>iFolder Conflict Resolver</value>
+		<value>Resolve Conflicts</value>
 	</data>
 	<data name="$this.ToolTip">
 		<value />
