--- a/simias/tools/FormsStoreBrowser/Form1.resx
+++ b/simias/tools/FormsStoreBrowser/Form1.resx
@@ -166,6 +166,24 @@
   <data name="MI_RecentS.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
   </data>
+  <data name="menuItem9.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>Private</value>
+  </data>
+  <data name="menuItem9.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>Private</value>
+  </data>
+  <data name="menuItemProperty.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>Private</value>
+  </data>
+  <data name="menuItemProperty.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>Private</value>
+  </data>
+  <data name="menuItemXml.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>Private</value>
+  </data>
+  <data name="menuItemXml.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>Private</value>
+  </data>
   <data name="tView.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
   </data>
@@ -207,8 +225,8 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFpTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0xLjAuNTAw
         MC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZT
         eXN0ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMA
-        AAB8CAAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/AQkBEAj/AUIBTQE2AQQGAAE2AQQC
-        AAEoAwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB
+        AACwEAAAAk1TRnQBSQFMAgEBDAEAAQ4BAAEEAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQC
+        AAEoAwABQAMAAUADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB
         3AHAAQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IB
         AAM5AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8B
         MwMAAWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYC
@@ -235,15 +253,50 @@
         /wGZAcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC
         /wEzAQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC
         /wFmAQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gB
-        AAHwAfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xkAAew9AAMDAf8B
-        AwHsJgALCwMAAewBAwn/AQMB7CMAAQsFAQJnBAEBHgMAAQML/wEDIwABHgUBAZkB/wUBAR4DAAEDC/8j
-        AAEeBR8BmQH/BR8BHgQAAQMK/wEDAewhAAEeBSABmgH/BSABHgUAC/8iAAEeBSABmgH/BSABHgUAAQMK
-        /yIAAQEEIAGxAv8FIAEBBQABAwL/AgcG/wEDIQABAQQlAWkBbwHjBSUBAQUAAQMB/wQHBf8BByEAAQEF
-        aQGaAf8FaQEBBQABAwHsAgcB7AIHBf8hAAEkAeMEFwGUAZoE4wFvAQEFAAL8AwACBwX/IQABAQHjBpQB
-        JQQkBgAB7AH8AwAH/yEAAQEBJAWaASQBAQwACv8iAAEBBSUBAQwACwNhAAFCAU0BPgcAAT4DAAEoAwAB
-        QAMAARADAAEBAQABAQUAAYAXAAP/AQAD/wEfBAAC/wHAAQ8EAAGAAQcBAAEHBQABAwEAAQcFAAEDAYAB
-        AwUAAQMBwAEBBQABAwHgAQEFAAEDAeABAQUAAQMB4AEBBQABAwHgBgABAwHgBgABAwHgBgABBwHgBgAB
-        fwHgBQABgAH/AfABAQQABP8aAAs=
+        AAHwAfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AGgAG
+        +QYAAwcBAAIHLAAK+QYAAgcDAAIHKAAE+QUAA/kDAAL/AgAD/wIAAQcHAAsLFAAD+QgAA/kCAAn/AwAC
+        BgEAAQsFAQJnBAEBHhQAAvkIAAT5AgAC/wcHAQADBwEGAQABHgUBAZkB/wUBAR4MAAH/AQcB/wEHAgAD
+        +QcAAvkCAAL5AQAJ/wMAAgcBAAEeBR8BmQH/BR8BHgQAAewBAALsAQAB7AEAAQcC/wEHAf8BBwEAAvkH
+        AAL5AwAC+QEADP8DAAEeBSABmgH/BSABHgMAAQcBAAcHAf8BBwH/AQAB/wEAAvkBAAH/AQAD/wL5Av8C
+        AAL5AQAC/wsHAQABBwEeBSABmgH/BSABHgMAAf8BBwH/AQcB/wEHAf8BBwH/AQcB/wQAAvkFAAL5BQAC
+        +QEADf8BAAEHAQEEIAGxAv8FIAEBCgACBwH/AQcB/wEAAf8BAAL5BAMC+QYAAvkBAA3/AQABBwEBBCUB
+        aQFvAeMFJQEBDAABBwH/AQcB/wIAA/kCAwL5BwAC+QEAAf8C+QP/AfkD/wL5Af8BAAEHAQEFaQGaAf8F
+        aQEBEwAC+QEDAvkIAAH5AgAB/wH5Af8B+QH/AfkB/wH5Af8B+QP/AQABBwEkAeMEFwGUAZoE4wFvAQET
+        AAT5CAAC+QIAAf8B+QH/AfkB/wH5Af8B+QH/AfkD/wEAAQcBAQHjBpQBJQQkFQAE+QUAA/kDAAH/AvkD
+        /wH5A/8C+QH/AQABBwEBASQFmgEkAQEaAAr5BAAN/wEAAQcBAAEBBSUBAR0ABvknAAEHAQABBy4ACvwE
+        AAEHAwQBBy8ABfwGAAEHBQQIBwHsJwAE/AYABwQHBwHsAQAO7AQADewHAAL/CAAHBAcHAewBAAHsAf8B
+        +wEHAfsBBwH7AQcB+wEHAfsBBwH7AewEAAHsFAAF/wQAAwQB/gIEAQAHBwHsAQAB7AH/AQcB+wEHAfsB
+        BwH7AQcB+wEHAfsBBwHsAgAFBwr/CAAE/wHsBAACBAP+AQQBAAcHAewBAAHsAf8B+wEHAfsBBwH7AQcB
+        +wEHAfsBBwH7AewHAAEHAf8F7AP/CAAF/wQAAQQF/gEABwcB7AEAAewB/wEHAfsBBwH7AQcB+wEHAfsB
+        BwH7AQcB7AIACQcG/wcAB/8DAAEEBf4BBgcHAewBAAHsAf8B+wEHAfsBBwH7AQcB+wEHAfsBBwH7AewL
+        AAPsA/8JAAL/AewB/wUAAQQD/gEECewBAAHsAf8BBwH7AQcB+wEHAfsBBwH7AQcB+wEHAewDAAUHCf8I
+        AAP/AewHAAEEAf4BBAEAA+wBBwEABOwBAAHsAf8B+wEHAfsBBwH7AQcB+wEHAfsBBwH7AewIAAX/AQEB
+        BwIBBwAF/wgAAQQFAAHsBgAB7Az/AewGAAf/AQEBBwIBCQAC/xYAAewBBwH7AQcB+wEHAfsBBwbsKgAB
+        7AH/AQcGAAHsAQcB+wEHAfsBBwHsMAAB7AL/BwAF7DIAAuw3AAEHAQABBxIAAW0BEgHqJwABBwMEAQcI
+        7AgAAUQCAQELCQAFBwEAAewGAA7sAgABBwUEAQcB+gIHAewCAALsBwABAQH5ASABHgHsCQAEBwEAAuwF
+        AAHsAf8BBwH6BgcB7AIHAuwBAAcECOwCAAHrARMDFQFGAvkBRQFDAhUBQwFtBgADBwEAAewBAAHsBAAB
+        7AH/BQcFAAEHAuwBAAcEBgcBAAHsAgAB6gSaAUYC+QFFA5oBeQEVBwACBwEAAewB/wEAAewDAAHsDP8C
+        7AEAAwQB/gIEAQABBwTsAf8B7AMAAW0EmgFFAfkBIAFFBJoBQwoAAewB/wEAAuwPAALsAQACBAP+AQQB
+        AAEHBPwB/wHsAwAB6wOaAVID+QFFBJoBRAHtCQAB7AH/AQAC7AMADOwBAAHsAQABBAX+AQABBwT8Af8B
+        7AIAAuwBegKaAXQC9AEWAUsBegOaAUoBbQkAAewB/wEAAuwDAAHsAf8JBwLsAgABBAX+AQYBBwTsAf8B
+        7AIAAesBHAN6A3QCUgR6AVEBEwkAAQcB/wEAAuwDAAHsAf8BBwEABgQBBwLsAgAB7AEEA/4BBAL/BQcB
+        7AIAAW0BdAR6AXQBJQEkAXQEegF0AREIAAIHAf8BAALsAwAB7AH/AQcBAAX8AQQBBwLsAgAB7AH/AQQB
+        /gEEAf8E7AH/AQcEAAFtAXQDUgF0AW8CRwFzAXQDUgF0AREFAAHsAQcB/wIHA/kB7AMAAewB/wEHAQAF
+        /AEEAQcC7AIAAewC/wEEB/8BBwQAARIB+AGZAxsB7wH1ARcBdAEbAhoBdAFtAesGAAHsAQcB/wIHAvkB
+        7AMAAewB/wEHAQAF/AEEAQcC7AIAAewB/wPsAf8E7AH/AQcFAAFtAXkB/wH1AfMBeQIaAnkBdAF6AXQB
+        bQgAAewBBwH/AgcB+QEHAwAB7AH/AQcHAAEHAuwCAAHsCwcFAAFtAXoCdAF6AXQHbQoAAewBBwH/AgcE
+        AAHsCv8C7AIAAewJBAEAAQcFAAFtAZoCegF5AeoSAAHsAQcB/wEHBQAB7AkHAf8B7AIADOwGAAHrA20d
+        AAvsAgABQgFNAT4HAAE+AwABKAMAAUADAAFAAwABAQEAAQEGAAECFgAD/4EAAv8B+AEfAYkF/wHgAQcB
+        AAE/BP8BwwHjAQABHwGAAQcC/wGPAfEBAAEZAQABAwH/AcMBnwHhAQABAQEAAQMB0gGBAR8BzAEAAQEB
+        AAEDAYAEAAEBAQABAwcAAQMBAAEEBQABAwMAAegDAAEDAf8CAQHYAwABAwH/AcMBgwG1AwABAwL/AYcB
+        6QMAAQcC/wHDAeMDAAF/Av8B4AEHAgABgAP/AfgBHwEAAQEC/wHHBf8BwAEDAYABAAT/AeABBwIAAYAB
+        AQL/AfABHwMAAQEBwAEBAfgBDwMAAQEBwAEAAfABBwMAAQECAAHwAQcDAAEBAgAB4AEHAwABAQIAAcAB
+        AwMAAQECAAHAAQcBgAIAAQEBgAEAAcABDwHEAgABAQGAAQABwAEPAe8BnwEAAQEB4AEAAcABHwH/AZ8B
+        AAEDAeABAAHgAQ8B/wEPAYAD/wHwAR8B/wEPAcEG/wGfBv8BxgEDAf4BPwGAAT8BgAEDAYABAQH8AT8B
+        gAEfAQABAQIAAfwBHwGAAQ8EAAGAAQEBgAEHAwABAQGAAQEBgAEDAwABAQGAAQEBgAEBAYACAAEBAYAB
+        AAGAAQEBgAEBAQABAQIAAYABAQGAAQEBAAEBAgABwAEBAYABAQEAAQECAAHgAQEBgAEBAQABBwIAAfAB
+        AQGAAQEBAAEHAgAB+AEBAYABAQEAAQcBgAEBAfwBAQGAAQEBAAEHAYABAwH+AQMBgAEBAQABBwGBAv8B
+        AwHAAQEBAAEHAcMC/wGHAeABAws=
 </value>
   </data>
   <data name="listView1.Locked" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -327,22 +380,16 @@
   <data name="pcmEdit.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
   </data>
-  <data name="menuItem9.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="menuItemExit.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
   </data>
-  <data name="menuItem9.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="menuItemExit.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
   </data>
-  <data name="menuItemProperty.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="menuItem10.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
   </data>
-  <data name="menuItemProperty.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>Private</value>
-  </data>
-  <data name="menuItemXml.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>Private</value>
-  </data>
-  <data name="menuItemXml.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="menuItem10.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
   </data>
   <data name="$this.Locked" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -357,9 +404,6 @@
   <data name="$this.Localizable" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </data>
-  <data name="$this.Name">
-    <value>Form1</value>
-  </data>
   <data name="$this.GridSize" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>8, 8</value>
   </data>
@@ -371,6 +415,9 @@
   </data>
   <data name="$this.SnapToGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </data>
+  <data name="$this.Name">
+    <value>Form1</value>
   </data>
   <data name="$this.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
