Fixed grammatical errors (https://bugzilla.novell.com/show_bug.cgi?id=83410)
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4665 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/AcceptInvitation.resx
+++ b/ifolder/src/FormsTrayApp/AcceptInvitation.resx
@@ -872,7 +872,7 @@
     <value>CenterParent</value>
   </data>
   <data name="$this.Text">
-    <value>Setup iFolder {0}</value>
+    <value>Set Up iFolder {0}</value>
   </data>
   <data name="&gt;&gt;$this.Name">
     <value>AcceptInvitation</value>
