--- a/ifolder/src/FormsTrayApp/GlobalProperties.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.resx
@@ -431,7 +431,7 @@
     <value>True</value>
   </data>
   <data name="menuRefresh.Text">
-    <value>&amp;Refresh list</value>
+    <value>Re&amp;fresh list</value>
   </data>
   <data name="menuRefresh.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -452,7 +452,7 @@
     <value>True</value>
   </data>
   <data name="menuAccept.Text">
-    <value>Setup iFolder</value>
+    <value>Set &amp;up iFolder</value>
   </data>
   <data name="menuAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -515,7 +515,7 @@
     <value>True</value>
   </data>
   <data name="menuResolve.Text">
-    <value>Resolve conflicts</value>
+    <value>Resolve &amp;conflicts</value>
   </data>
   <data name="menuResolve.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -536,7 +536,7 @@
     <value>True</value>
   </data>
   <data name="menuSyncNow.Text">
-    <value>Sync now</value>
+    <value>S&amp;ync now</value>
   </data>
   <data name="menuSyncNow.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -557,7 +557,7 @@
     <value>True</value>
   </data>
   <data name="menuRevert.Text">
-    <value>Revert to a normal folder</value>
+    <value>Revert to a &amp;normal folder</value>
   </data>
   <data name="menuRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -578,7 +578,7 @@
     <value>True</value>
   </data>
   <data name="menuRemove.Text">
-    <value>Remove iFolder</value>
+    <value>&amp;Remove iFolder</value>
   </data>
   <data name="menuRemove.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -620,7 +620,7 @@
     <value>True</value>
   </data>
   <data name="menuProperties.Text">
-    <value>Properties</value>
+    <value>&amp;Properties</value>
   </data>
   <data name="menuProperties.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -716,7 +716,7 @@
     <value>True</value>
   </data>
   <data name="menuActionAccept.Text">
-    <value>S&amp;etup iFolder</value>
+    <value>Set &amp;up iFolder</value>
   </data>
   <data name="menuActionAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -737,7 +737,7 @@
     <value>True</value>
   </data>
   <data name="menuActionRemove.Text">
-    <value>Re&amp;move iFolder</value>
+    <value>&amp;Remove iFolder</value>
   </data>
   <data name="menuActionRemove.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -863,7 +863,7 @@
     <value>True</value>
   </data>
   <data name="menuActionRevert.Text">
-    <value>&amp;Revert to a normal folder</value>
+    <value>Revert to a &amp;normal folder</value>
   </data>
   <data name="menuActionRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1172,7 +1172,7 @@
     <value>toolBar1</value>
   </data>
   <data name="&gt;&gt;toolBar1.Type">
-    <value>Novell.FormsTrayApp.ToolBarEx, iFolderApp, Version=1.0.1924.22385, Culture=neutral, PublicKeyToken=null</value>
+    <value>Novell.FormsTrayApp.ToolBarEx, iFolderApp, Version=1.0.1950.19150, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;toolBar1.Parent">
     <value>$this</value>
@@ -1214,10 +1214,10 @@
     <value>-1</value>
   </data>
   <data name="toolBarSetup.Text">
-    <value>Setup</value>
+    <value>Set Up</value>
   </data>
   <data name="toolBarSetup.ToolTipText">
-    <value>Setup this iFolder</value>
+    <value>Set up this iFolder</value>
   </data>
   <data name="toolBarSetup.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1519,11 +1519,11 @@
   <data name="$this.DrawGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </data>
-  <data name="$this.Name">
-    <value>GlobalProperties</value>
-  </data>
   <data name="$this.TrayHeight" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>80</value>
+  </data>
+  <data name="$this.Name">
+    <value>GlobalProperties</value>
   </data>
   <data name="$this.SnapToGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1565,7 +1565,7 @@
     <value />
   </data>
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>NoControl</value>
+    <value>Inherit</value>
   </data>
   <data name="$this.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>0, 0</value>
