--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -1757,7 +1757,7 @@
     <value>12</value>
   </data>
   <data name="logout.Text">
-    <value>L&amp;ogout</value>
+    <value>Log &amp;out</value>
   </data>
   <data name="logout.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>MiddleCenter</value>
@@ -1847,7 +1847,7 @@
     <value>11</value>
   </data>
   <data name="login.Text">
-    <value>&amp;Login</value>
+    <value>&amp;Log in</value>
   </data>
   <data name="login.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>MiddleCenter</value>
